master: fix dark mode button breakpoint

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -94,7 +94,7 @@ h6 {
   background-color: #555;
 }
 
-@media only screen and (min-width: 380px) {
+@media only screen and (min-width: 601px) {
   #toggleDarkMode {
     position: fixed;
     top: 20px;
